k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-digital-card-svc
  namespace: default
  labels:
    app: ai-digital-card
    tier: backend
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8201
      targetPort: 8201
  selector:
    app: ai-digital-card
